fix: 가게 목록 조회 무한스크롤